Ensure textareas don't become too small to type in

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -33,3 +33,7 @@ table.center {
 .center {
   margin: 0 auto;
 }
+
+textarea {
+  min-height: 100px;
+}
